setuptools, dependencies, PEP8, docker-compose

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,8 @@
+include LICENSE
+include README.md
+include .gitignore
+include Dockerfile
+include docker-compose.yml
+
 include dlmsearch/data/*.csv
 include dlmsearch/views/*.html
